src/style.css
:root {
    --square-side: 40px;
    
}

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    background-color: cadetblue;
}

.header{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 50px;
    color: white;
}

.player-container, .computer-container{
    display: grid;
    grid-template-columns: repeat(11, var(--square-side));
    grid-template-rows: repeat(11, var(--square-side));
    margin: 20px;
}

.columns-container{
    grid-area: 1 / 2 / 2 / 12;
    display: flex;
    align-items: center;
    flex-direction: row;
}

.column {
    width: var(--square-side);
    height: var(--square-side);
    border: 1px solid red;
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    background-color: black;
}



.rows-container{
    grid-area: 2 / 1 / 12 / 2;
    display: flex;
    align-items: center;
    flex-direction: column;
}

.row {
    width: var(--square-side);
    height: var(--square-side);
    border: 1px solid blue;
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    background-color: black;
}

.board{
    grid-area: 2 / 2 / 12 / 12;
    display: grid;
    grid-template-columns: repeat(10, var(--square-side));
    grid-template-rows: repeat(10, var(--square-side));
    grid-auto-flow: column;
}


.square{
    width: var(--square-side);
    height: var(--square-side);
    border: 1px solid black;
    display: flex;
    background-color: gainsboro;
    justify-content: center;
    align-items: center;
}

.miss {
    background-color: royalblue;
}

.hit {
    background-color: red;
}

.sunk {
    background-color: darkred;
}

